force-app/main/default/objects/ServiceAppointment/fields/Rider_ServiceReport_URL__c.field-meta.xml
<CustomField>
    <fullName>Rider_ServiceReport_URL__c</fullName>
    <description>URL to public service report</description>
    <inlineHelpText>URL to public service report</inlineHelpText>
    <label>Rider Service Report URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>