force-app/main/default/objects/ServiceAppointment/fields/Rider_StartTime__c.field-meta.xml
<CustomField>
    <fullName>Rider_StartTime__c</fullName>
    <label>Rider StartTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>